[package]
name = "storage_dal"
version = "0.4.0"
authors = ["JLer <jlerxky@live.com>"]
edition = "2021"
description = "A storage data access layer for structured data based on OpenDAL"
categories = ["storage"]
keywords = ["DAL", "opendal"]
readme = "README.md"
repository = "https://github.com/JLerxky/storage_dal"
license = "Apache-2.0"

[features]
default = ["cache", "disk", "remote"]
cache = ["cache-moka"]
disk = ["disk-sled"]
remote = ["remote-s3"]

cache-moka = ["opendal/services-moka"]
disk-sled = ["opendal/services-sled"]
disk-redb = ["opendal/services-redb"]
disk-rocksdb = ["opendal/services-rocksdb"]
remote-s3 = ["opendal/services-s3"]

[dependencies]
storage_dal_derive = { path = "derive" }

bincode = "1.3"
cfg-if = "1.0"
opendal = { version = "0.41", default-features = false }
serde = { version = "1.0", features = ["derive"] }
