[package]
name = "storage_dal"
version = "0.3.1"
authors = ["JLer <jlerxky@live.com>"]
edition = "2021"
description = "A storage data access layer for structured data based on OpenDAL"
categories = ["storage"]
keywords = ["DAL", "opendal"]
readme = "README.md"
repository = "https://github.com/JLerxky/storage_dal"
license = "Apache-2.0"

[features]
default = ["sled"]
moka = ["opendal/services-moka"]
sled = ["opendal/services-sled"]
redb = ["opendal/services-redb"]
rocksdb = ["opendal/services-rocksdb"]

[dependencies]
storage_dal_derive = "0.3.0"

bincode = "1.3"
cfg-if = "1.0"
opendal = { version = "0.41", default-features = false }
serde = { version = "1.0", features = ["derive"] }
